...
import SwiftUI

struct ContentView: View {
    var body: some View {
        @State var emailID = ""
        @State var password = ""
        @State var title = "Sign In"
        
        NavigationStack{
            VStack(alignment: .center, spacing: 16) {
                Text(title)
                    .font(.largeTitle).foregroundStyle(.primary).padding(.top, 50).padding(.bottom, 80)
                
...
